[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/ResultsPage.gd" type="Script" id=1]
[ext_resource path="res://UI/Font/TitilliumWeb-SemiBold.ttf" type="FontFile" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.2, 0.258824, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="FontFile" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.384314, 0.419608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.439216, 0.47451, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ResultsPage" type="Control"]
anchor_right = 1.0
offset_bottom = 348.0
script = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 10

[node name="Panel" type="Panel" parent="MarginContainer2"]
offset_left = 10.0
offset_top = 10.0
offset_right = 470.0
offset_bottom = 348.0
theme_override_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer"]
offset_left = 20.0
offset_top = 5.0
offset_right = 440.0
offset_bottom = 332.0
theme_override_constants/separation = 5

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
offset_right = 420.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = SubResource( 2 )
text = "Testresultater"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
offset_top = 31.0
offset_right = 420.0
offset_bottom = 255.0
theme_override_constants/separation = 0

[node name="Tag" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_right = 420.0
offset_bottom = 28.0
theme_override_constants/separation = -1

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/Tag"]
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"
align = 1

[node name="CriteriaKGS" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 28.0
offset_right = 420.0
offset_bottom = 56.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaKGS"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Kriterie lekkasjerate: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaKGS"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"

[node name="TestKGS" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 56.0
offset_right = 420.0
offset_bottom = 84.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestKGS"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Test lekkasjerate: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestKGS"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"

[node name="CriteriaTime" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 84.0
offset_right = 420.0
offset_bottom = 112.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaTime"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Kriterie 0 bar dp: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaTime"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="TestTime" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 112.0
offset_right = 420.0
offset_bottom = 140.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestTime"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Test 0 bar dp: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestTime"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="CriteriaOri" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 140.0
offset_right = 420.0
offset_bottom = 168.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaOri"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Kriterie orifice: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaOri"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="TestOri" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 168.0
offset_right = 420.0
offset_bottom = 196.0
theme_override_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestOri"]
offset_right = 210.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Test orifice: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestOri"]
offset_left = 209.0
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="Accepted" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 196.0
offset_right = 420.0
offset_bottom = 224.0
theme_override_constants/separation = -1

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/Accepted"]
offset_right = 420.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = " Godkjent!"
align = 1

[node name="CSV" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
offset_top = 260.0
offset_right = 420.0
offset_bottom = 291.0
custom_minimum_size = Vector2( 150, 30 )
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
theme_override_styles/hover = SubResource( 5 )
theme_override_styles/normal = SubResource( 6 )
text = "Lagre som CSV"

[node name="Close" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
offset_top = 296.0
offset_right = 420.0
offset_bottom = 327.0
custom_minimum_size = Vector2( 150, 30 )
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
theme_override_styles/hover = SubResource( 5 )
theme_override_styles/normal = SubResource( 6 )
text = "Tilbake"

[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer2/CSV" to="." method="store_result_as_csv"]
[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer2/Close" to="." method="_on_Close_pressed"]
